[package]
name = "rustyos"
version = "0.1.0"
authors = ["PizzasBear <mx.sht06@gmail.com>"]
edition = "2018"


[package.metadata.bootimage]
default-target = "rustyos.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
