[package]
name = "rustyos"
version = "0.1.0"
authors = ["PizzasBear <mx.sht06@gmail.com>"]

[package.metadata.bootimage]
default-target = "rustyos.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
volatile = "0.2"
# lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5"
multiboot2 = "0.8"

